# dana

./: .gitignore  ARCHITECTURE.md  DANA_architecture.md  dana_benchmark.ipynb  pyproject.toml  test_train.py
.goopspec/: state.json
.goopspec/history/: 2026-07-01.json  2026-07-04.json  2026-07-06.json
configs/: dana.yaml  test.yaml
dana/: README.md  train.py
dana-checkpoints/: dataset-metadata.json
dana-results-hgs/: dataset-metadata.json
dana/configs/: dana.yaml
dana/data/: download_osm.py  osm_loader.py
dana/eval/: baselines.py  metrics.py
dana/models/: context.py  policy.py
docs/: MSc-proposal.md
kaggle/: eval.py  requirements.txt  setup.sh  train.py
kaggle/eval/: 00_upload_instances.ipynb  01_solver_dana.ipynb  02_solver_pyvrp.ipynb  03_solver_hgs.ipynb  04_solver_lkh3.ipynb  05_solver_ortools.ipynb  06_solver_ml.ipynb  06_solver_ml_v8.ipynb  07_aggregate.ipynb  cvrp_comparison.py  fix_notebook.py  gen_ml_v8.py  kernel-metadata-00.json  kernel-metadata-01.json  kernel-metadata-02.json  kernel-metadata-03.json  kernel-metadata-04.json  kernel-metadata-05.json  kernel-metadata-06.json  kernel-metadata-07.json  kernel-metadata.json  local_eval.py  main.py  run_routefinder.py
kaggle/train/: kernel-metadata.json  main.py
latex/: paper.aux  paper.bak0  paper.bak1  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
latex/figures/: generate_figures.py
model/: __init__.py  train.py
model/data/: benchmark.py  download_instances.py  download_osm.py  osm_loader.py
papers/: README.md  __papers_index.md  _model_data.json
(+8 files in other folders)
