[project]
name = "dana"
version = "0.1.0"
description = "Disaster-Aware Neural Algorithm for humanitarian logistics routing"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ahmed AbdelBadie Ahmed"},
]

dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "osmnx>=1.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "kagglehub>=0.2.0",
    "networkx>=3.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"model" = ["data/instances/**/*"]
